--- a/order-service/package.json
+++ b/order-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "product-service",
+  "name": "order-service",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -7,25 +7,23 @@
     "dev": "nodemon app.js"
   },
   "keywords": [
-    "Product Service"
+    "Order Service"
   ],
   "author": "Sujoy Karmakar",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "amqplib": "^0.10.4",
+    "@prisma/client": "^5.17.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "pg": "^8.12.0",
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "prisma": "^5.17.0"
   }
 }
