--- a/order-service/package.json
+++ b/order-service/package.json
@@ -14,13 +14,15 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "amqplib": "^0.10.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.12.0",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
