--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start:user-service": "cd user-service && npm run dev",
     "start:product-service": "cd product-service && npm run dev",
     "start:order-service": "cd order-service && npm run dev",
-    "all": "concurrently \"npm run start:user-service\" \"npm run start:product-service\" \"npm run start:order-service\""
+    "start:notification-service": "cd notification-service && npm run dev",
+    "all": "concurrently \"npm run start:user-service\" \"npm run start:product-service\" \"npm run start:order-service\" \"npm run start:notification-service\""
   },
   "keywords": [],
   "author": "",
