--- a/product-service/package.json
+++ b/product-service/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.14.0",
     "amqplib": "^0.10.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
