--- a/cart-service/package.json
+++ b/cart-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user-service",
+  "name": "cart-service",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -7,27 +7,22 @@
     "dev": "nodemon app.js"
   },
   "keywords": [
-    "User Service"
+    "Cart Service"
   ],
   "author": "Sujoy Karmakar",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^5.17.0",
-    "amqplib": "^0.10.4",
-    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.12.0"
+    "redis": "^4.7.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4",
-    "prisma": "^5.17.0"
+    "nodemon": "^3.1.4"
   }
 }
