--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -20,7 +20,8 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
